--- a/dqn/config.yaml
+++ b/dqn/config.yaml
@@ -18,6 +18,8 @@ epsilon: 1.0
 final_epsilon: 0.05
 test_epsilon: 0.001
 
+is_aggregator: True
+
 learning_rate: 0.001
 minibatch_size: 32
 history_len: 1
