--- a/dqn/config.yaml
+++ b/dqn/config.yaml
@@ -1,22 +1,23 @@
 rendering: False
 nb_experiments: 1
 random_seed: 1234
-total_eps: 5000
+total_eps: 10000
 total_test_eps: 1
 is_learning: True
 eps_per_epoch: 10
 max_start_nullops: 0
 is_testing: True
 eps_per_test: 1
-episode_max_len: 5000
+episode_max_len: 10000
 step_max_len: 1500
 folder_location: '/results/'
 test: False
+transfer: True
 
 annealing: True
-annealing_episodes: 5000
+annealing_episodes: 10000
 epsilon: 1.0
-final_epsilon: 0.05
+final_epsilon: 0.001
 test_epsilon: 0.001
 
 is_aggregator: True
@@ -31,9 +32,9 @@ update_freq: 100
 action_dim: 1
 num_units: 250
 
-draw_graph_freq: 10
-draw_cv2_freq: 500
-draw_movie_freq: 500
+draw_graph_freq: 20
+draw_cv2_freq: 1000
+draw_movie_freq: 1000
 
 test_draw_cv2_freq: 1
 test_draw_movie_freq: 1
