--- a/dqn/config.yaml
+++ b/dqn/config.yaml
@@ -2,16 +2,16 @@ rendering: False
 nb_experiments: 1
 random_seed: 1234
 total_eps: 10000
-total_test_eps: 1
+total_test_eps: 5
 is_learning: True
 eps_per_epoch: 10
 max_start_nullops: 0
 is_testing: True
 eps_per_test: 1
 episode_max_len: 10000
-step_max_len: 1000
+step_max_len: 100
 folder_location: '/results/'
-test: False
+test: True
 transfer: False
 
 annealing: True
@@ -22,7 +22,7 @@ test_epsilon: 0.001
 
 is_aggregator: True
 
-annealing_lr: True
+annealing_lr: False
 learning_rate: 0.001
 final_lr: 0.00001
 
